--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> FlexiSlide-Gallery [HAL museum Bengaluru] - heizshubham </title>
   <link rel="stylesheet" href="./style.css">
 
