--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Made by Shubham Pandey -->
+<!-- Made by Shubham Pandey (@slaycount) -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> FlexiSlide-Gallery [HAL museum Bengaluru] - heizshubham </title>
+  <title> Black-Day(14/Feb) By Shubham Pandey (@slaycount) </title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -14,66 +14,56 @@
 <body>
   <main>
     <ul class='slider'>
-      <li class='item' style="background-image: url('./Photos/Ajeet.jpeg')">
+      <li class='item' style="background-image: url('./Photos/lastimg6.jpg')">
         <div class='content'>
-          <h2 class='title'>"HAL Ajeet"</h2>
-          <p class='description'> The HAL Ajeet was a jet-powered fighter aircraft developed and manufactured by Indian
-            aerospace manufacturer Hindustan Aeronautics Limited. It was operated by the Indian Air Force between 1977
-            and 1991. The Ajeet is a derivative of the British Folland Gnat light fighter aircraft. </p>
-          <button onclick="window.location.href = 'https://en.wikipedia.org/wiki/HAL_Ajeet';">Read More</button>
+          <h2 class='title'>"Made-By-"Shubham Pandey"(@slaycount)"</h2>
+          <p class='description'> Hi this is Shubham Pandey, A self learner Frontend Developer, you can visit my page by clicking below. </p>
+          <button onclick="window.location.href = 'https://www.instagram.com/slaycount?igsh=aGE2Y3lvcHg3cGMz';">Click Here</button>
         </div>
       </li>
-      <li class='item' style="background-image: url('./Photos/Radar.jpeg')">
+      <li class='item' style="background-image: url('./Photos/img1-Blackday.jpeg')">
         <div class='content'>
-          <h2 class='title'>"Air trafic control radar"</h2>
-          <p class='description'> This air traffic control radar is an ‘L’ band surveillance radar (1250 MHZ-1350 MHZ)
-            with a detection range of 200 nautical miles. Its antenna rotates at a speed of 5-10 revolutions per minute.
+          <h2 class='title'>"Black-Day(14/Feb)"</h2>
+          <p class='description'> The Pulwama attack evokes emotions of shock, sorrow, and outrage, stirring a sense of national unity and resilience against terrorism. It reminds us of the sacrifices made by brave soldiers and their families, igniting feelings of grief for the lives lost and sympathy for the wounded. The incident instills a deep sense of determination to combat terrorism and safeguard the nation's security, while also fostering solidarity and support for those affected by the tragedy.
           </p>
           <button
-            onclick="window.location.href = 'https://en.wikipedia.org/wiki/Air_traffic_control_radar_beacon_system';"
+            onclick="window.location.href = 'https://en.wikipedia.org/wiki/2019_Pulwama_attack';"
             target="_blank">Read
             More</button>
         </div>
       </li>
-      <li class='item' style="background-image: url('./Photos/Lakshya.jpeg')">
+      <li class='item' style="background-image: url('./Photos/img2.jpg')">
         <div class='content'>
-          <h2 class='title'>"Lakshya Pilotless Target Aircraft"</h2>
-          <p class='description'> Lakshya is a cost effective re-usable high subsonic aerial target system powered by a
-            gas turbine engine and launched either from land or ship. It carries two tow targets of tow lengths of 1.5
-            km each having radar, IR or visual signature augmentation and Miss Distance Indication Scoring System. </p>
-          <button onclick="window.location.href ='https://en.wikipedia.org/wiki/DRDO_Lakshya';"> Read More</button>
+          <h2 class='title'>"Pulwama attack Homage"</h2>
+          <p class='description'> Fifteen of the 19 militants involved in the 2019 Pulwama attack have been either been killed or arrested while the security situation in Kashmir has improved with greater synergy between agencies. </p>
+          <button onclick="window.location.href ='https://www.deccanherald.com/india/nation-pays-homage-to-crpf-jawans-killed-in-2019-pulwama-attack-1191114.html';"> Read More</button>
         </div>
       </li>
-      <li class='item' style="background-image: url('./Photos/Lca.jpeg')">
+      <li class='item' style="background-image: url('./Photos/img3.jpg')">
         <div class='content'>
-          <h2 class='title'>"Light combat aircraft"</h2>
-          <p class='description'>
-            An LCA will typically be equipped with bombs, gun pods, or short-range air-to-air missiles used for COIN or
-            CAS missions. Some aircraft integrate more advanced armaments such as smart bombs, air to ground missiles,
-            ECM pods (Electronic Countermeasure), and electronic targeting systems.
+          <h2 class='title'>"Black-Day in History of India"</h2>
+          <p class='description'>Prime Minister Narendra Modi on Tuesday, February 14, 2023, paid tribute to the CRPF personnel who lost their lives in a terror attack on their convoy in Pulwama on this day in 2019.
+            He tweeted, "Remembering our valorous heroes who we lost on this day in Pulwama. We will never forget their supreme sacrifice. Their courage motivates us to build a strong and developed India.".
           </p>
           <button
             onclick="window.location.href ='https://en.wikipedia.org/wiki/Light_combat_aircraft#:~:text=An%20LCA%20will%20typically%20be,)%2C%20and%20electronic%20targeting%20systems';">Read
             More</button>
         </div>
       </li>
-      <li class='item' style=" background-image: url('./Photos/Marut.jpeg')">
+      <li class='item' style=" background-image: url('./Photos/img4.jpg')">
         <div class='content'>
-          <h2 class='title'>"HAL HF-24 Marut"</h2>
+          <h2 class='title'>"Story Behind the attack"</h2>
           <p class='description'>
-            The HAL HF-24 Marut was an Indian fighter-bomber aircraft of the 1960s. Developed by Hindustan Aeronautics
-            Limited, with Kurt Tank as lead designer. The Project Engineer from HAL was George William Benjamin.
+            The Pulwama attack, a devastating terrorist act that occurred on February 14, 2019, in the Pulwama district of Jammu and Kashmir, India, targeted a convoy of vehicles carrying Indian security personnel. A suicide bomber affiliated with the Pakistan-based militant group Jaish-e-Mohammed rammed an explosive-laden vehicle into one of the convoy buses, resulting in the tragic deaths of 40 Central Reserve Police Force (CRPF) personnel and injuring many others. This heinous act not only sparked widespread condemnation and international outrage but also escalated tensions between India and Pakistan, leading to a significant military confrontation. The attack underscored the persistent threat of terrorism in the region and heightened concerns over cross-border terrorism originating from Pakistan.
           </p>
-          <button onclick="window.location.href ='https://en.wikipedia.org/wiki/HAL_HF-24_Marut';">Read More</button>
+          <button onclick="window.location.href ='https://www.bbc.com/news/world-asia-india-47302467';">Read More</button>
         </div>
       </li>
-      <li class='item' style="background-image: url('./Photos/MIG-21_Fighter.jpeg')">
+      <li class='item' style="background-image: url('./Photos/img5.jpg')">
         <div class='content'>
-          <h2 class='title'>"MIG-21 Fighter"</h2>
-          <p class='description'> The MiG-21 was the first supersonic fighter in service of the IAF and was inducted in
-            1963 and has participated in all major conflicts since. More than 800 variants of the supersonic fighter
-            have been inducted into service, and it remained the frontline fighter jet of the IAF for a long time. </p>
-          <button onclick="window.location.href = 'https://en.wikipedia.org/wiki/Mikoyan-Gurevich_MiG-21';">Read
+          <h2 class='title'>"The Indian Flag"</h2>
+          <p class='description'> The Indian flag, known as the Tricolour, is a deeply emotive symbol representing unity, diversity, and the hard-won independence from colonial rule. It evokes profound feelings of pride and patriotism, symbolizing hope for a brighter future and the collective aspirations of millions striving for progress and social justice. Treated with utmost reverence, it embodies India's commitment to peace, non-violence, and inclusive development, inspiring generations to uphold the nation's shared values. </p>
+          <button onclick="window.location.href = 'https://en.wikipedia.org/wiki/Flag_of_India';">Read
             More</button>
         </div>
       </li>
